Add comprehensive .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,46 @@
+# Environment variables
 .env
+.env.local
+
+# Virtual Environment
+.venv/
+venv/
+env/
+
+# Python cache and compiled files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# OS files
+Thumbs.db
+
+# Uploaded files and temporary data
+uploads/
+results/
+*.csv
