Add python-dotenv to requirements and Vercel environment config

--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,9 @@
       "src": "/(.*)",
       "dest": "api/index.py"
     }
-  ]
+  ],
+  "env": {
+    "EMAIL_USER": "@EMAIL_USER",
+    "EMAIL_PASS": "@EMAIL_PASS"
+  }
 }
